# cnpeak

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/app_ocr/: CMakeLists.txt  app_ocr.cpp  app_ocr.hpp  build_config_crnn.json  build_config_dbnet.json  cali_config_crnn.json  cali_config_dbnet.json  download_crnn.sh  download_dbnet.sh
app/app_ocr/tools/: jit_crnn.py  requirement.txt
app/app_ocr/tools/datasets/total_text/: test_list.txt
app/app_ocr/tools/datasets/total_text/test_gts/: img487.jpg.txt
app/app_openpose/: CMakeLists.txt  app_openpose.cpp  app_openpose.hpp  build_config.json  cali_config.json  download_openpose.sh
app/app_yolov5/: CMakeLists.txt  app_yolov5.cpp  app_yolov5.hpp  build_config.json  cali_config.json  download_yolov5.sh
app/app_yolov5/tool/: yolov5_v6_1_pytorch.patch
core/: blockqueue.cpp  cnData.cpp  cnData.h  cnMemoryPool.h  cnPipe.cpp  cnPipe.hpp  cnPublicContext.h  cnStruct.cpp  cnStruct.h  compare.cpp  compare.hpp  data.h  delete_files.cpp  memoryblock.cpp  memoryblock.h  report.cpp  report.hpp  tools.cpp  tools.hpp
plugin/common_infer/: cvImageCalibData.h  fixedCalibData.h  magicmind_common.cpp  magicmind_common.h  magicmind_infer.cpp  magicmind_infer.h
plugin/plugin_id_gen/: plugin_id_gen.cpp  plugin_id_gen.hpp
plugin/plugin_image_save_opencv/: plugin_image_save_opencv.cpp  plugin_image_save_opencv.hpp
plugin/plugin_infer/: plugin_infer.cpp  plugin_infer.hpp
plugin/plugin_infer_batch/: infer_batch_server.cpp  infer_batch_server.hpp  plugin_infer_batch.cpp  plugin_infer_batch.hpp
plugin/plugin_infer_batch_parallel_mm/: cvImageCalibData.h  fixedCalibData.h  infer_batch_server_parallel.cpp  infer_batch_server_parallel.hpp  plugin_infer_batch_parallel.cpp  plugin_infer_batch_parallel.hpp
plugin/plugin_infer_copyout/: plugin_infer_copyout.cpp  plugin_infer_copyout.hpp
plugin/plugin_infer_multi_copyout/: plugin_infer_multi_copyout.cpp  plugin_infer_multi_copyout.hpp
plugin/plugin_infer_multi_data_parallel/: infer_multidata_worker.cpp  infer_multidata_worker.hpp  plugin_infer_multi_data_parallel.cpp  plugin_infer_multi_data_parallel.hpp
plugin/plugin_post_crnn/: plugin_post_crnn.cpp  plugin_post_crnn.hpp
plugin/plugin_post_dbnet/: plugin_post_dbnet.cpp  plugin_post_dbnet.hpp
plugin/plugin_post_openpose/: openpose_tools.cpp  openpose_tools.h  plugin_post_openpose.cpp  plugin_post_openpose.hpp
plugin/plugin_post_yolov5/: plugin_post_yolov5.cpp  plugin_post_yolov5.hpp
plugin/plugin_pre_cncv_common/: plugin_pre_cncv.cpp  plugin_pre_cncv.hpp
plugin/plugin_pre_crnn/: plugin_pre_crnn.cpp  plugin_pre_crnn.hpp
plugin/plugin_pre_dbnet/: plugin_pre_dbnet.cpp  plugin_pre_dbnet.hpp
plugin/plugin_src_image_cncodec/: plugin_src_image_cncodec.cpp  plugin_src_image_cncodec.hpp
plugin/plugin_src_video_cncodec/: plugin_src_video_cncodec.cpp  plugin_src_video_cncodec.hpp
plugin/plugin_video_gen/: plugin_video_gen.cpp  plugin_video_gen.hpp  video_gen_server.cpp  video_gen_server.hpp
plugin/plugin_video_http/: http_server.cpp  http_server.h  plugin_video_http.cpp  plugin_video_http.hpp
plugin/plugin_video_play/: plugin_video_play.cpp  plugin_video_play.hpp
